Add next function

--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #wrap {
+            width: 520px;
+            height: 360px;
+            overflow: hidden;
+        }
+
+        #slider {
+            position: relative;
+            left: 0;
+            width: 520px;
+            height: 360px;
+            object-fit: cover;
+            transition: all 0.5s;
+            opacity: 1;
+        }
+    </style>
 </head>
 
 <body>
@@ -12,7 +29,7 @@
         <img id="slider" src="images/landscape-photography-tips-yosemite-valley-feature.webp">
     </div>
     <button id="next">&gt;</button><br>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
