Add prev button

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div id="wrap">
         <img id="slider" src="images/landscape-photography-tips-yosemite-valley-feature.webp">
     </div>
+    <button id="prev">&lt;</button>
     <button id="next">&gt;</button><br>
     <script src="script.js" defer></script>
 </body>
