Add Without button

--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
     <button id="start">start</button><br>
     <button id="stop">stop</button><br>
     <form action="" name="effects">
-        <input type="radio" name="effect" value="none">
-        <input type="radio" name="effect" value="go">
-        <input type="radio" name="effect" value="fade">
+        <input type="radio" name="effect" value="none" checked> none <br>
+        <input type="radio" name="effect" value="go"> go <br>
+        <input type="radio" name="effect" value="fade"> fade <br>
+        <input type="button" value="Get effect" id="get_effect">
     </form>
     <script src="script.js" defer></script>
 </body>
